# rostro

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml  spec.md
assets/faces/default/: manifest.yaml
assets/faces/fatlady/: manifest.yaml
config/: default.yaml
docs/plans/: 2026-02-12-memory-system-design.md  2026-02-12-memory-system-plan.md
installation/: le-potato.md
rostro/: __init__.py  main.py
rostro/activation/: __init__.py  silero.py  vad.py
rostro/audio/: __init__.py  capture.py  config.py  playback.py
rostro/avatar/: __init__.py  engine.py  face_pack.py  photo.py  programmatic.py
rostro/conversation/: __init__.py  engine.py
rostro/memory/: __init__.py  context_builder.py  digester.py  general_store.py  manager.py  session_timer.py  topic_detector.py  topic_store.py
rostro/providers/: __init__.py  base.py
rostro/providers/embeddings/: __init__.py  openai.py
rostro/providers/llm/: __init__.py  openai.py
rostro/providers/stt/: __init__.py  openai.py
rostro/providers/tts/: __init__.py  google.py  openai.py
rostro/runtime/: __init__.py  controller.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/unit/: __init__.py  test_activation.py  test_audio.py  test_avatar.py  test_conversation.py  test_memory_context_builder.py  test_memory_digester.py  test_memory_general_store.py  test_memory_manager.py  test_memory_session_timer.py  test_memory_topic_detector.py  test_memory_topic_split.py  test_memory_topic_store.py  test_providers.py
